--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React Editor",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron index.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/vlad-ignatov/ride/issues"
   },
-  "homepage": "https://github.com/vlad-ignatov/ride#readme"
+  "homepage": "https://github.com/vlad-ignatov/ride#readme",
+  "devDependencies": {
+    "electron-prebuilt": "^0.34.3"
+  }
 }
