--- a/package.json
+++ b/package.json
@@ -25,6 +25,23 @@
   },
   "homepage": "https://github.com/vlad-ignatov/ride#readme",
   "devDependencies": {
-    "electron-prebuilt": "^0.34.3"
+    "babel": "^6.1.5",
+    "babel-core": "^6.1.4",
+    "babel-loader": "^6.1.0",
+    "babel-plugin-syntax-jsx": "^6.1.4",
+    "babel-preset-es2015": "^6.1.4",
+    "babel-preset-react": "^6.1.4",
+    "babel-preset-stage-0": "^6.1.2",
+    "electron-prebuilt": "^0.34.3",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.1",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.4"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.1.4",
+    "css-loader": "^0.22.0",
+    "jquery": "^2.1.4",
+    "react": "^0.14.2"
   }
 }
