--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "babel-preset-react": "^6.1.4",
     "babel-preset-stage-0": "^6.1.2",
     "electron-prebuilt": "^0.34.3",
+    "file-loader": "^0.8.4",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
     "webpack": "^1.12.4"
   },
   "dependencies": {
