--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
   "devDependencies": {
     "babel": "^6.1.5",
     "babel-core": "^6.1.4",
+    "babel-eslint": "^4.1.5",
     "babel-loader": "^6.1.0",
     "babel-plugin-syntax-jsx": "^6.1.4",
     "babel-preset-es2015": "^6.1.4",
     "babel-preset-react": "^6.1.4",
     "babel-preset-stage-0": "^6.1.2",
     "electron-prebuilt": "^0.34.3",
+    "eslint": "^1.9.0",
+    "eslint-plugin-react": "^3.8.0",
     "file-loader": "^0.8.4",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
