--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "webpack": "^1.12.4"
   },
   "dependencies": {
+    "alt": "^0.17.9",
     "babel-runtime": "^6.1.4",
     "css-loader": "^0.22.0",
     "jquery": "^2.1.4",
