--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React Editor",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel-register tests",
     "start": "electron index.js",
     "install-package": "node install-package"
   },
@@ -34,12 +34,15 @@
     "babel-preset-es2015": "^6.1.4",
     "babel-preset-react": "^6.1.4",
     "babel-preset-stage-0": "^6.1.2",
+    "babel-register": "^6.3.13",
+    "chai": "*",
     "electron-prebuilt": "^0.34.3",
     "eslint": "^1.9.0",
     "eslint-plugin-react": "^3.8.0",
     "file-loader": "^0.8.4",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
+    "mocha": "^2.3.4",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.4"
@@ -60,5 +63,12 @@
     "packages": {
       "command-palette": "^1.0.0"
     }
+  },
+  "babel": {
+    "plugins": [],
+    "presets": [
+      "es2015"
+    ],
+    "ignore": []
   }
 }
